--- a/exporter/sentryexporter/metadata.yaml
+++ b/exporter/sentryexporter/metadata.yaml
@@ -3,11 +3,10 @@ type: sentry
 status:
   class: exporter
   stability:
-    beta: [traces]
+    beta: [traces, logs]
   distributions: [contrib]
   codeowners:
     active: [AbhiPrasad]
-
 
 tests:
   expect_consumer_error: true
